fixed the porportion distortion

--- a/src/app/quote-display/quote-display.component.scss
+++ b/src/app/quote-display/quote-display.component.scss
@@ -2,8 +2,8 @@ img {
     max-height: 90vh;
     max-width: 90vw;
     margin: 0 auto;
-    width: fit-content;
-    height: fit-content;
+    width: auto;
+    height: auto;
     border: 1.2rem solid white;
     display: flex;
 
